//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  username String [unique, not null]
  name String [not null]
  firstName String [not null]
  lastName String [not null]
  img String
  role Role [not null]
  active Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  twoFactorEnabled Boolean
  twoFactorCode String
  twoFactorCodeExpires DateTime
  admin Admin
  teacher Teacher
  student Student
  parent Parent
  chatroomSessions ChatroomSession [not null]
  sessionParticipants SessionParticipant [not null]
  messages ChatroomMessage [not null]
  reactions Reaction [not null]
  raisedHands RaisedHand [not null]
  scheduleDrafts ScheduleDraft [not null]
}

Table Admin {
  id String [pk]
  name String [not null]
  surname String [not null]
  phone String
  userId String [unique, not null]
  user User [not null]
}

Table Teacher {
  id String [pk]
  name String [not null]
  surname String [not null]
  phone String
  address String
  img String
  bloodType String
  birthday DateTime
  sex UserSex
  userId String [unique, not null]
  user User [not null]
  subjects Subject [not null]
  lessons Lesson [not null]
  teacherConstraints TeacherConstraint [not null]
  teacherAssignments TeacherAssignment [not null]
}

Table Student {
  id String [pk]
  name String [not null]
  surname String [not null]
  address String [not null]
  phone String [not null]
  img String
  bloodType String [not null]
  birthday DateTime [not null]
  sex UserSex [not null]
  userId String [unique, not null]
  user User [not null]
  classId Int
  class Class
  gradeId Int
  grade Grade
  parentId String
  parent Parent
  attendances Attendance [not null]
  results Result [not null]
  optionalSubjects Subject [not null]
  optionalGroup OptionalSubjectGroup
  optionalGroupId String
}

Table Parent {
  id String [pk]
  name String [not null]
  surname String [not null]
  phone String
  address String [not null]
  userId String [unique, not null]
  user User [not null]
  students Student [not null]
}

Table Grade {
  id Int [pk, increment]
  level Int [unique, not null]
  classes Class [not null]
  students Student [not null]
}

Table Class {
  id Int [pk, increment]
  name String [not null]
  abbreviation String
  capacity Int [not null]
  gradeId Int [not null]
  grade Grade [not null]
  students Student [not null]
  lessons Lesson [not null]
  assignments Assignment [not null]
  exams Exam [not null]
  announcements Announcement [not null]
  events Event [not null]
  lessonRequirements LessonRequirement [not null]
  classAssignments ClassAssignment [not null]
}

Table Subject {
  id Int [pk, increment]
  name String [not null]
  weeklyHours Int [not null]
  coefficient Int [not null]
  isOptional Boolean [default: false]
  requiresRoom Boolean [not null, default: false]
  teachers Teacher [not null]
  lessons Lesson [not null]
  lessonRequirements LessonRequirement [not null]
  subjectRequirements SubjectRequirement [not null]
  teacherAssignments TeacherAssignment [not null]
  students Student [not null]
  optionalGroups OptionalSubjectGroup [not null]
}

Table Classroom {
  id Int [pk, increment]
  name String [not null]
  abbreviation String
  capacity Int [not null]
  building String
  lessons Lesson [not null]
  subjectRequirements SubjectRequirement [not null]
}

Table Lesson {
  id Int [pk, increment]
  name String [not null]
  day Day [not null]
  startTime DateTime [not null]
  endTime DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subjectId Int [not null]
  subject Subject [not null]
  classId Int
  class Class
  teacherId String [not null]
  teacher Teacher [not null]
  classroomId Int
  classroom Classroom
  attendances Attendance [not null]
  exams Exam [not null]
  assignments Assignment [not null]
  scheduleDraftId String
  scheduleDraft ScheduleDraft
  optionalGroupId String
  optionalGroup OptionalSubjectGroup
}

Table Exam {
  id Int [pk, increment]
  title String [not null]
  startTime DateTime [not null]
  endTime DateTime [not null]
  lessonId Int [not null]
  lesson Lesson [not null]
  classId Int
  class Class
  results Result [not null]
}

Table Assignment {
  id Int [pk, increment]
  title String [not null]
  startDate DateTime [not null]
  dueDate DateTime [not null]
  lessonId Int [not null]
  lesson Lesson [not null]
  classId Int
  class Class
  results Result [not null]
}

Table Result {
  id Int [pk, increment]
  score Float [not null]
  studentId String [not null]
  student Student [not null]
  examId Int
  exam Exam
  assignmentId Int
  assignment Assignment
}

Table Attendance {
  id Int [pk, increment]
  date DateTime [not null]
  present Boolean [not null]
  studentId String [not null]
  student Student [not null]
  lessonId Int [not null]
  lesson Lesson [not null]
}

Table Announcement {
  id Int [pk, increment]
  title String [not null]
  description String
  date DateTime [not null]
  classId Int
  class Class
}

Table Event {
  id Int [pk, increment]
  title String [not null]
  description String
  startTime DateTime [not null]
  endTime DateTime [not null]
  classId Int
  class Class
}

Table School {
  id Int [pk, increment]
  name String [not null]
  startTime String [not null]
  endTime String [not null]
  sessionDuration Int [not null]
  sessionInterval Int [not null]
  schoolDays String[] [not null]
}

Table LessonRequirement {
  id Int [pk, increment]
  hours Int [not null]
  scheduleDraftId String
  scheduleDraft ScheduleDraft
  classId Int [not null]
  class Class [not null]
  subjectId Int [not null]
  subject Subject [not null]

  indexes {
    (classId, subjectId, scheduleDraftId) [unique]
  }
}

Table SubjectRequirement {
  id Int [pk, increment]
  timePreference TimePreference [not null, default: 'ANY']
  scheduleDraftId String
  scheduleDraft ScheduleDraft
  subjectId Int [not null]
  subject Subject [not null]
  allowedRooms Classroom [not null]
}

Table TeacherConstraint {
  id Int [pk, increment]
  day Day [not null]
  startTime String [not null]
  endTime String [not null]
  description String
  scheduleDraftId String
  scheduleDraft ScheduleDraft
  teacherId String [not null]
  teacher Teacher [not null]
}

Table TeacherAssignment {
  id Int [pk, increment]
  scheduleDraftId String
  scheduleDraft ScheduleDraft
  teacherId String [not null]
  teacher Teacher [not null]
  subjectId Int [not null]
  subject Subject [not null]
  classAssignments ClassAssignment [not null]

  indexes {
    (teacherId, subjectId, scheduleDraftId) [unique]
  }
}

Table ClassAssignment {
  id Int [pk, increment]
  teacherAssignmentId Int [not null]
  classId Int [not null]
  teacherAssignment TeacherAssignment [not null]
  class Class [not null]

  indexes {
    (teacherAssignmentId, classId) [unique]
  }
}

Table ScheduleDraft {
  id String [pk]
  userId String [not null]
  user User [not null]
  name String [not null]
  description String
  isActive Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  schoolConfig Json
  classes Json
  subjects Json
  teachers Json
  rooms Json
  grades Json
  lessons Lesson [not null]
  lessonRequirements LessonRequirement [not null]
  subjectRequirements SubjectRequirement [not null]
  teacherConstraints TeacherConstraint [not null]
  teacherAssignments TeacherAssignment [not null]

  indexes {
    (userId, name) [unique]
  }
}

Table OptionalSubjectGroup {
  id String [pk]
  name String [not null]
  subjectId Int [not null]
  subject Subject [not null]
  students Student [not null]
  lessons Lesson [not null]
}

Table ChatroomSession {
  id String [pk]
  title String [not null]
  description String
  type SessionType [not null]
  classId Int
  startTime DateTime [default: `now()`, not null]
  endTime DateTime
  status String [not null, default: 'ACTIVE']
  hostId String [not null]
  host User [not null]
  participants SessionParticipant [not null]
  messages ChatroomMessage [not null]
  reactions Reaction [not null]
  polls Poll [not null]
  quizzes Quiz [not null]
  raisedHands RaisedHand [not null]
}

Table SessionParticipant {
  id String [pk]
  joinedAt DateTime [default: `now()`, not null]
  isMuted Boolean [not null, default: false]
  chatroomSessionId String [not null]
  userId String [not null]
  session ChatroomSession [not null]
  user User [not null]

  indexes {
    (chatroomSessionId, userId) [unique]
  }
}

Table ChatroomMessage {
  id Int [pk, increment]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  authorId String [not null]
  author User [not null]
  chatroomSessionId String [not null]
  session ChatroomSession [not null]
}

Table Reaction {
  id Int [pk, increment]
  type ReactionType [not null]
  timestamp DateTime [default: `now()`, not null]
  userId String [not null]
  user User [not null]
  chatroomSessionId String [not null]
  session ChatroomSession [not null]
}

Table RaisedHand {
  id Int [pk, increment]
  raisedAt DateTime [default: `now()`, not null]
  chatroomSessionId String [not null]
  userId String [not null]
  session ChatroomSession [not null]
  user User [not null]

  indexes {
    (chatroomSessionId, userId) [unique]
  }
}

Table Poll {
  id Int [pk, increment]
  question String [not null]
  options Json [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  endedAt DateTime
  chatroomSessionId String [not null]
  session ChatroomSession [not null]
}

Table Quiz {
  id Int [pk, increment]
  title String [not null]
  questions Json [not null]
  currentQuestionIndex Int [not null, default: 0]
  isActive Boolean [not null, default: true]
  startTime DateTime [default: `now()`, not null]
  endTime DateTime
  chatroomSessionId String [not null]
  session ChatroomSession [not null]
}

Table SubjectToTeacher {
  subjectsId Int [ref: > Subject.id]
  teachersId String [ref: > Teacher.id]
}

Table OptionalSubjects {
  optionalsubjectsId Int [ref: > Subject.id]
  studentsId String [ref: > Student.id]
}

Table ClassroomToSubjectRequirement {
  subjectrequirementsId Int [ref: > SubjectRequirement.id]
  allowedroomsId Int [ref: > Classroom.id]
}

Enum Role {
  ADMIN
  TEACHER
  STUDENT
  PARENT
  VISITOR
}

Enum UserSex {
  MALE
  FEMALE
}

Enum SessionType {
  CLASS
  MEETING
}

Enum ReactionType {
  THUMBS_UP
  THUMBS_DOWN
  HEART
  LAUGH
  UNDERSTOOD
  CONFUSED
}

Enum Day {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

Enum TimePreference {
  ANY
  AM
  PM
}

Ref: Admin.userId - User.id [delete: Cascade]

Ref: Teacher.userId - User.id [delete: Cascade]

Ref: Student.userId - User.id [delete: Cascade]

Ref: Student.classId > Class.id [delete: Set Null]

Ref: Student.gradeId > Grade.id

Ref: Student.parentId > Parent.id [delete: Set Null]

Ref: Student.optionalGroupId > OptionalSubjectGroup.id [delete: Set Null]

Ref: Parent.userId - User.id [delete: Cascade]

Ref: Class.gradeId > Grade.id

Ref: Lesson.subjectId > Subject.id [delete: Cascade]

Ref: Lesson.classId > Class.id [delete: Cascade]

Ref: Lesson.teacherId > Teacher.id [delete: Cascade]

Ref: Lesson.classroomId > Classroom.id [delete: Set Null]

Ref: Lesson.scheduleDraftId > ScheduleDraft.id

Ref: Lesson.optionalGroupId > OptionalSubjectGroup.id

Ref: Exam.lessonId > Lesson.id [delete: Cascade]

Ref: Exam.classId > Class.id

Ref: Assignment.lessonId > Lesson.id [delete: Cascade]

Ref: Assignment.classId > Class.id

Ref: Result.studentId > Student.id [delete: Cascade]

Ref: Result.examId > Exam.id [delete: Cascade]

Ref: Result.assignmentId > Assignment.id [delete: Cascade]

Ref: Attendance.studentId > Student.id [delete: Cascade]

Ref: Attendance.lessonId > Lesson.id [delete: Cascade]

Ref: Announcement.classId > Class.id [delete: Cascade]

Ref: Event.classId > Class.id [delete: Cascade]

Ref: LessonRequirement.scheduleDraftId > ScheduleDraft.id

Ref: LessonRequirement.classId > Class.id [delete: Cascade]

Ref: LessonRequirement.subjectId > Subject.id [delete: Cascade]

Ref: SubjectRequirement.scheduleDraftId > ScheduleDraft.id

Ref: SubjectRequirement.subjectId > Subject.id [delete: Cascade]

Ref: TeacherConstraint.scheduleDraftId > ScheduleDraft.id

Ref: TeacherConstraint.teacherId > Teacher.id [delete: Cascade]

Ref: TeacherAssignment.scheduleDraftId > ScheduleDraft.id

Ref: TeacherAssignment.teacherId > Teacher.id [delete: Cascade]

Ref: TeacherAssignment.subjectId > Subject.id [delete: Cascade]

Ref: ClassAssignment.teacherAssignmentId > TeacherAssignment.id [delete: Cascade]

Ref: ClassAssignment.classId > Class.id [delete: Cascade]

Ref: ScheduleDraft.userId > User.id

Ref: OptionalSubjectGroup.subjectId > Subject.id

Ref: ChatroomSession.hostId > User.id

Ref: SessionParticipant.chatroomSessionId > ChatroomSession.id [delete: Cascade]

Ref: SessionParticipant.userId > User.id [delete: Cascade]

Ref: ChatroomMessage.authorId > User.id [delete: Cascade]

Ref: ChatroomMessage.chatroomSessionId > ChatroomSession.id [delete: Cascade]

Ref: Reaction.userId > User.id [delete: Cascade]

Ref: Reaction.chatroomSessionId > ChatroomSession.id [delete: Cascade]

Ref: RaisedHand.chatroomSessionId > ChatroomSession.id [delete: Cascade]

Ref: RaisedHand.userId > User.id [delete: Cascade]

Ref: Poll.chatroomSessionId > ChatroomSession.id [delete: Cascade]

Ref: Quiz.chatroomSessionId > ChatroomSession.id [delete: Cascade]